external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_binding1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_binding1.move:8:13
  │
8 │         let x0 = old !(_x);
  │             ^^ Unused local variable 'x0'. Consider removing or prefixing with an underscore: '_x0'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/verification/spec_only_do_filter_binding1.move:8:18
  │
8 │         let x0 = old !(_x);
  │                  ^^^ Unbound function 'old' in current scope
